@@ -1,3 +1,9 @@
+2008-02-21  Michael Olson  <mwolson@gnu.org>
+
+	* net/json.el: Install new file by Edward O'Connor.  json.el is a
+	JavaScript Object Notation parser / generator.  Replace XEmacs
+	compatibility code to get rid of compiler warnings.
+
 2008-02-21  Dave Love  <fx@gnu.org>
 
 	* progmodes/sym-comp.el: New file.
